--- a/Admin-Login.html
+++ b/Admin-Login.html
@@ -9,19 +9,19 @@
   </head>
 
   <body>
- 
-    <div id = "nav"> 
-        <img src ="images/stylezillawithoutbackground.png">
-        <h3>Admin Portal</h3>
+    <div id="nav">
+      <img src="images/stylezillawithoutbackground.png" />
+      <h3>Admin Portal</h3>
     </div>
     <div class="box">
       <div class="head">
-        <img
-          style="margin-top: 19px"
-          height="10%"
-          width="100%"
-          src="images\stylezillawithoutbackground.png"
-        />
+        <a href="index.html"
+          ><img
+            style="margin-top: 19px"
+            height="10%"
+            width="100%"
+            src="images\stylezillawithoutbackground.png"
+        /></a>
       </div>
       <div class="signin">
         <h1 style="padding-left: 11px">Sign in</h1>
@@ -76,10 +76,10 @@
         />
       </div>
 
-      <p style ="background-color: white;"><u>Sign in with Apple </u></p>
+      <p style="background-color: white"><u>Sign in with Apple </u></p>
     </div>
 
-    <script src ="Admin-login.js"></script>
+    <script src="Admin-login.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
