--- a/Orders.html
+++ b/Orders.html
@@ -18,10 +18,10 @@
     <!--?--------------------------------------------- Header ----------------------------------------------->
     <header>
       <div id="nav_bar">
-        <img src="./Images/StyleZillaWIthoutBackground.png" alt="" id="logo" />
+        <a href="index.html"><img src="./Images/StyleZillaWIthoutBackground.png" alt="" id="logo" /></a>
         <div>
-          <a href=""> <h4>Women</h4></a>
-          <a href=""> <h4>Men</h4></a>
+          <a href="womens_Index.html"> <h4>Women</h4></a>
+          <a href="mens.html"> <h4>Men</h4></a>
           <a href=""> <h4>Kids</h4></a>
           <a href=""> <h4>Shoes</h4></a>
           <a href=""> <h4>Bags</h4></a>
@@ -32,7 +32,7 @@
           <a href=""> <h4>More</h4></a>
           <a href=""><h4 id="signin">👤 Admin</h4></a>
           <a href=""> <h4>Wishlist</h4></a>
-          <a href=""><h4>Cart</h4></a>
+          <a href="checkout.html"><h4>Cart</h4></a>
         </div>
       </div>
     </header>
