--- a/checkout.html
+++ b/checkout.html
@@ -24,10 +24,12 @@
     </div>
 
     <div id="nav_bar">
-      <img src="./Images/StyleZillaWIthoutBackground.png" alt="" id="logo" />
+      <a href="index.html"
+        ><img src="./Images/StyleZillaWIthoutBackground.png" alt="" id="logo"
+      /></a>
       <div>
-        <a href=""> <h4>Women</h4></a>
-        <a href=""> <h4>Men</h4></a>
+        <a href="womens_Index.html"> <h4>Women</h4></a>
+        <a href="mens.html"> <h4>Men</h4></a>
         <a href=""> <h4>Kids</h4></a>
         <a href=""> <h4>Shoes</h4></a>
         <a href=""> <h4>Bags</h4></a>
@@ -36,7 +38,7 @@
           ><input type="text" placeholder="🔍  What are you looking for ?"
         /></a>
         <a href=""> <h4>More</h4></a>
-        <a href=""><h4 id="signin">SignUp/SignIn</h4></a>
+        <a href="signup.html"><h4 id="signin">SignUp/SignIn</h4></a>
         <a href=""> <h4>Wishlist</h4></a>
         <a href=""><h4>Cart</h4></a>
       </div>
