--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   <div id="nav_bar">
    
   
-    <a href=""> <img src="./images/StyleZillaWIthoutBackground.png" alt="" id="logo"></a>
-    <a href="" id="women_list_head" class="nav_menu">
+    <a href="index.html"> <img src="./images/StyleZillaWIthoutBackground.png" alt="" id="logo"></a>
+    <a href="womens_Index.html" id="women_list_head" class="nav_menu">
       <h4>Women</h4>
     </a>
-    <a href="" id="men_list_head" class="nav_menu">
+    <a href="mens.html" id="men_list_head" class="nav_menu">
       <h4>Men</h4>
     </a>
     <a href="" id="kids_head" class="nav_menu">
@@ -51,13 +51,13 @@
     <a href="" id="more_head">
       <h4>More</h4>
     </a>
-    <a href="" id="login_head" class="nav_menu">
+    <a href="signup.html" id="login_head" class="nav_menu">
       <h4>SignUp/SignIn</h4>
     </a>
     <a href="" id="wish_head" class="nav_menu">
       <h4>Wishlist</h4>
     </a>
-    <a href="" id="cart_head" class="nav_menu">
+    <a href="checkout.html" id="cart_head" class="nav_menu">
       <h4>Cart</h4>
     </a>
   </div>
@@ -406,7 +406,7 @@
       </a>
     </div>
   </div>
-</body>
+
 
 <div class="off_section">
   <a href=""><img
@@ -797,5 +797,6 @@
   </div>
 </div>
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+</body>
 </html>
 <script src="./index.js"></script>
