--- a/payment.html
+++ b/payment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Payment</title>
+    <title>StyleZilla : Payment</title>
     <link rel="stylesheet" href="payment.css" />
   </head>
 
@@ -13,7 +13,7 @@
     <header class="header sticky">
       <div class="navbar">
         <div>
-          <img  width=100% height="75px"
+         <img  width=100% height="75px"
           src="images\logo.png" />
         </div>
   
