--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>signup</title>
+    <title>StyleZilla : Signup</title>
 
     <link rel="stylesheet" href="signup.css" />
   </head>
@@ -13,8 +13,9 @@
     <div>
       <div class="box">
         <div class="head">
-          <img src="images/logo.png" />
+          <a href="index.html"><img src="images/logo.png" /></a>
         </div>
+
         <h1 style="padding-left: 9px">Create your free account</h1>
 
         <form class="form">
@@ -48,15 +49,8 @@
       </div>
 
       <div class="btm">
+        <br />
         <!-- <hr style="margin-top:30px" size="3"  margin-top=30px width="90%" color="lightgrey">or</hr> -->
-        <div class="or">
-          <div
-            style="padding: 3px 8px; margin-top: -3px; background-color: white"
-          >
-            or
-          </div>
-        </div>
-
         <div class="goo">
           <mark>Continue with Google</mark>
           <img
@@ -73,6 +67,8 @@
       </div>
     </div>
   </body>
+
+  <a href="Admin-Login.html"><button id="admin">Admin Login</button></a>
 </html>
 
 <script src="signup.js"></script>
