--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
           />
         </div>
         <div class="signin">
-          <h1 style="padding-left: 11px; color: #faa619 ;">Sign in</h1>
+          <h1 style="padding-left: 11px; color: #faa619">Sign in</h1>
           <h4>or <a href="signup.html"> create an account</a></h4>
         </div>
 
@@ -78,5 +78,5 @@
   </body>
 </html>
 
-<script src="/urbane-look-6820/login.js"></script>
+<script src="login.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
