--- a/payment.html
+++ b/payment.html
@@ -13,8 +13,8 @@
     <header class="header sticky">
       <div class="navbar">
         <div>
-         <img  width=100% height="75px"
-          src="images\logo.png" />
+         <a href="index.html"><img  width=100% height="75px"
+          src="images\logo.png" /></a>
         </div>
   
         <div class="phone-logo">
@@ -321,7 +321,7 @@
             <!-- *************************line****** -->
         <div style="width: 400px; margin: auto"><hr /></div>
         <div class="discription">
-          <img src="https://i1.lmsin.net/website_images/in/checkout/comodo-secure-icon.svg">
+          <img style="margin: 10px;" src="https://i1.lmsin.net/website_images/in/checkout/comodo-secure-icon.svg">
           <p>
               Your credit card details are securely encrypted and passed directly to our PCI DSS compliant Payment Gateway for processing. We only store your credit card's last 4 digits and the expiration date. Your traffic to this page is secured using either a 256-bit or 128-bit SSL certificate depending on your browser version.
   .</p>
