--- a/signup.html
+++ b/signup.html
@@ -8,15 +8,19 @@
 
     <link rel="stylesheet" href="signup.css" />
   </head>
-
+  <div id="nav">
+    <a href="index.html"
+      ><img src="images/stylezillawithoutbackground.png"
+    /></a>
+  </div>
   <body>
     <div>
       <div class="box">
         <div class="head">
-          <a href="index.html"><img src="images/logo.png" /></a>
+          <a href="index.html"><img id="logo" src="images/logo.png" /></a>
         </div>
 
-        <h1 style="padding-left: 9px">Create your free account</h1>
+        <h1 id="createacc">Create your free account</h1>
 
         <form class="form">
           <label for="">Full Name<span class="required">*</span></label
@@ -46,24 +50,24 @@
             style="margin-top: 15px; font-size: 19px"
           />
         </form>
-      </div>
-
-      <div class="btm">
         <br />
-        <!-- <hr style="margin-top:30px" size="3"  margin-top=30px width="90%" color="lightgrey">or</hr> -->
-        <div class="goo">
-          <mark>Continue with Google</mark>
-          <img
-            style="width: 7%; padding-left: 15px"
-            src="images/google-logo.png"
-          />
+        <div class="btm">
+          <!-- <hr style="margin-top:30px" size="3"  margin-top=30px width="90%" color="lightgrey">or</hr> -->
+          <center>OR</center>
+          <div class="goo">
+            <mark>Continue with Google</mark>
+            <img
+              style="width: 10%; padding-left: 15px"
+              src="images/google-logo.png"
+            />
+          </div>
+          <p>Continue with Apple ID</p>
+          <p style="padding-top: 10px">
+            By creating an account, you agree to the Terms of Service and
+            Privacy Policy.
+          </p>
+          <p>Already have an account? <a href="login.html">Sign in</a></p>
         </div>
-        <p>Continue with Apple ID</p>
-        <p style="padding-top: 10px">
-          By creating an account, you agree to the Terms of Service and Privacy
-          Policy.
-        </p>
-        <p>Already have an account? <a href="login.html">Sign in</a></p>
       </div>
     </div>
   </body>
