--- a/Address.html
+++ b/Address.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>checkout</title>
+    <title>StyleZilla : Address</title>
   </head>
   <link rel="stylesheet" href="address.css">
   <body>
